[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "tensorflow>=2.20.0",
]
